k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: asia-southeast2-docker.pkg.dev/orca-lab01/fullstack-repo/backend:v1.6
        ports:
        - containerPort: 5000
      - name: cloudsql-proxy
        image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.10.1
        args:
         - "--structured-logs"
         - "--port=5432"
         - "$(INSTANCE_CONNECTION_NAME)"
        securityContext:
          runAsNonRoot: true
          runAsUser: 65532

---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
